<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">clubbook</string>
    <string name="login_fb">login with Facebook</string>
    <string name="sign_up_by_email">sign up with email</string>
    <string name="splash_intro">getting social in the club</string>
    <string name="terms">by signing into <a href="http://clubbook.com/">clubbook</a> you agree to the <a href="http://clubbook.com/">terms of use</a></string>
    <string name="fb_app_id">1504805883074351</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
    
    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item >Profile</item>
        <item >Club list</item>
        <item >Messages</item>
        <item >Friends</item>
        <item >Settings</item>
    </string-array>
    
    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/menu_default</item>
        <item>@drawable/menu_icon_c_list</item>
        <item>@drawable/menu_icon_chat</item>
        <item>@drawable/menu_icon_friends</item>
        <item>@drawable/menu_icon_settings</item>
    </array>

    <!-- Action bar titles -->
    <string name="header_profile">Profile details</string>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>

    <string name="email">email</string>
    <string name="password">password</string>
    <string name="login">login</string>
    <string name="name_reg">Name (min 2)</string>
    <string name="city_reg">your city</string>
    <string name="pass_reg">Password (min 6)</string>
    <string name="gender_reg">Gender</string>
    <string name="register">Register</string>
    <string name="upload_avatar">add a profile photo</string>
    <string name="dob">Birthday</string>

    <string name="name_incorrect">Name is incorrect</string>
    <string name="email_incorrect">Email is incorrect </string>
    <string name="pass_incorrect">Password is incorrect</string>
    <string name="avatar_incorrect">Avatar is missing</string>
    <string name="dob_incorrect">Birthday is incorrect</string>

    <string name="no_connection">No internet connection</string>
    <string name="no_location">Please enable location</string>
    <string name="retry_button">Retry</string>

    <string name="email_exists">This email already exists</string>

    <string name="has_account">Already has an account?</string>
    <string name="login_by_email">login</string>
    <string name="km">km</string>
    <string name="m">m</string>

    <string name="checkin">Check in</string>
    <string name="checkout">Check out</string>
    <string name="club_avatar_content_description">club avatar</string>

</resources>
