<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
    <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10dip" android:baselineAligned="false">

            <RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent">
                <ImageButton android:id="@+id/avatar_btn"
                             android:layout_width="100dp" android:adjustViewBounds="true"
                             android:layout_height="100dp" android:scaleType="fitCenter"
                             android:background="@drawable/test_avatar"/>

                <!-- Name Label -->
                <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/name_reg"
                        android:singleLine="true"
                        android:id="@+id/name_label"
                        android:textSize="17dp" android:layout_alignParentTop="true"
                        android:layout_toRightOf="@+id/avatar_btn"/>

                <!-- Name input text -->
                <EditText android:id="@+id/name_text" android:inputType="text"
                          style="@style/default_text_input"
                          android:layout_below="@+id/name_label" android:layout_toRightOf="@+id/avatar_btn"/>
            </RelativeLayout>

            <!-- Email Label -->
            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:singleLine="true"
                    android:layout_marginBottom="5dip" android:id="@+id/email_label"
                    android:textSize="17dp"/>

            <!-- Email input text -->
            <EditText android:id="@+id/email_text" android:inputType="textEmailAddress"
                      style="@style/default_text_input"
                      android:layout_marginBottom="5dip"/>

            <!-- Password Label -->
            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pass_reg"
                    android:layout_marginBottom="5dip" android:singleLine="false"
                    android:id="@+id/pass_label" android:textSize="17dp"/>

            <!-- Password input text -->
            <EditText android:id="@+id/password_text" android:password="true"
                      style="@style/default_text_input"
                      android:layout_marginBottom="5dip"/>

            <!-- Birthday Label -->
            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dob"
                    android:layout_marginBottom="5dip" android:id="@+id/dob_label"
                    android:textSize="17dp"/>

            <!-- Birthday input text -->
            <EditText android:id="@+id/dob_text" android:inputType="date"
                      style="@style/default_text_input"
                      android:layout_marginBottom="5dip"
                      android:focusable="false" android:editable="true" android:clickable="true"/>

            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/gender_reg"
                    android:layout_marginBottom="5dip" android:id="@+id/gender_label"
                    android:textSize="17dp"/>

            <Spinner
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dip"
                    android:id="@+id/gender" android:layout_gravity="left|center_vertical" android:focusable="true"/>

            <Button android:id="@+id/reg_btn"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/register" android:background="@drawable/main_button"
                    style="@style/default_button" android:layout_marginTop="10dp"/>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>