<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10dip" android:baselineAligned="false">

            <!-- Email Label -->
            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:singleLine="true"
                    android:layout_marginBottom="5dip" android:textSize="17dp"
                    android:id="@+id/email_label"/>

            <!-- Email input text -->
            <EditText
                    android:id="@+id/txtUsername"
                    style="@style/sign_in_input"
                    android:layout_marginBottom="10dip" android:inputType="textEmailAddress"
                    android:textIsSelectable="true" android:autoText="false"
                    />

            <!-- Password Label -->
            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:layout_marginBottom="5dip" android:textSize="17dp"
                    android:id="@+id/pass_label"/>

            <!-- Password input text -->
            <EditText android:id="@+id/txtPassword"
                      style="@style/sign_in_input"
                      android:layout_marginBottom="20dip" android:password="true"
                      android:singleLine="true"/>

            <!-- Login button -->
            <Button android:id="@+id/btnLogin"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login" android:background="@drawable/main_button" style="@style/main_button"/>

            <!--  <TextView   android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="@string/forgot_pass"
                          android:id="@+id/forgot_pass" android:layout_gravity="center_vertical|right"
                          android:layout_marginTop="15dp" android:clickable="true" android:textColor="#712f6d"/>-->
        </LinearLayout>

    </ScrollView>

</RelativeLayout>